fix(security,clinical): execute forensic audit remediation and harden clinical safety
- Resolve P0 BOLA/IDOR in patient chat session persistence
- Enforce authenticated patient context binding and fail-closed SOAP/FHIR authorization
- Redact plaintext OTP logging and prevent password reset user enumeration
- Expand FAST stroke and anaphylaxis emergency screening in SafetyScreeningEngine
- Guarantee emergency supremacy monotonicity in ResponseComposer
- Fix React Rules of Hooks conditional execution in modals
- Eliminate N+1 database bottlenecks with bulk MKE promotion and rollback
- Eliminate full-table scans with indexed clinical session persistence
- Balance diagnostic support scores and add context-aware lab validation
- Pass full test suite (191/191 tests) and 100k relationship scale benchmarks