@@ -1,7 +1,5 @@
 package com.velocura.service;
 
-import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.velocura.dto.AuthResponse;
 import com.velocura.dto.GoogleAuthRequest;
 import com.velocura.model.Doctor;
@@ -12,11 +10,15 @@ import com.velocura.repository.DoctorRepository;
 import com.velocura.repository.PatientRepository;
 import com.velocura.repository.UserRepository;
 import com.velocura.security.JwtUtils;
+import com.velocura.security.oauth.DefaultGoogleTokenVerifier;
+import com.velocura.security.oauth.GoogleTokenVerifier;
+import com.velocura.security.oauth.VerifiedGoogleUser;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.access.AccessDeniedException;
+import org.springframework.security.authentication.BadCredentialsException;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.springframework.web.client.RestTemplate;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
@@ -32,7 +34,7 @@ public class GoogleAuthServiceImpl implements GoogleAuthService {
     private final PasswordEncoder passwordEncoder;
     private final JwtUtils jwtUtils;
     private final NotificationService notificationService;
-    private final RestTemplate restTemplate;
+    private final GoogleTokenVerifier googleTokenVerifier;
 
     @Autowired
     public GoogleAuthServiceImpl(
@@ -41,88 +43,63 @@ public class GoogleAuthServiceImpl implements GoogleAuthService {
             DoctorRepository doctorRepository,
             PasswordEncoder passwordEncoder,
             JwtUtils jwtUtils,
-            NotificationService notificationService) {
+            NotificationService notificationService,
+            @Autowired(required = false) GoogleTokenVerifier googleTokenVerifier) {
         this.userRepository = userRepository;
         this.patientRepository = patientRepository;
         this.doctorRepository = doctorRepository;
         this.passwordEncoder = passwordEncoder;
         this.jwtUtils = jwtUtils;
         this.notificationService = notificationService;
-        this.restTemplate = new RestTemplate();
+        this.googleTokenVerifier = googleTokenVerifier != null ? googleTokenVerifier : new DefaultGoogleTokenVerifier();
+    }
+
+    public GoogleAuthServiceImpl(
+            UserRepository userRepository,
+            PatientRepository patientRepository,
+            DoctorRepository doctorRepository,
+            PasswordEncoder passwordEncoder,
+            JwtUtils jwtUtils,
+            NotificationService notificationService) {
+        this(userRepository, patientRepository, doctorRepository, passwordEncoder, jwtUtils, notificationService, new DefaultGoogleTokenVerifier());
     }
 
     @Override
     @Transactional
     public AuthResponse authenticateWithGoogle(GoogleAuthRequest request) {
-        String email = request.getEmail();
-        String googleId = request.getGoogleId();
-        String firstName = request.getFirstName();
-        String lastName = request.getLastName();
-        String picture = request.getPicture();
-
-        // 1. If Google ID Token is provided, verify it with official Google TokenInfo endpoint
-        if (request.getIdToken() != null && !request.getIdToken().trim().isEmpty()) {
-            try {
-                String tokenInfoUrl = "https://oauth2.googleapis.com/tokeninfo?id_token=" + request.getIdToken().trim();
-                String responseStr = restTemplate.getForObject(tokenInfoUrl, String.class);
-                if (responseStr != null) {
-                    ObjectMapper mapper = new ObjectMapper();
-                    JsonNode root = mapper.readTree(responseStr);
-                    if (root.has("email")) {
-                        email = root.get("email").asText();
-                    }
-                    if (root.has("sub")) {
-                        googleId = root.get("sub").asText();
-                    }
-                    if (root.has("given_name")) {
-                        firstName = root.get("given_name").asText();
-                    }
-                    if (root.has("family_name")) {
-                        lastName = root.get("family_name").asText();
-                    }
-                    if (root.has("picture")) {
-                        picture = root.get("picture").asText();
-                    }
-                }
-            } catch (Exception e) {
-                System.err.println("Google ID Token verification notice: " + e.getMessage());
-                // Fall back to direct fields if provided
-            }
+        if (request == null || request.getIdToken() == null || request.getIdToken().trim().isEmpty()) {
+            throw new BadCredentialsException("Google authentication failed: Cryptographic ID token is required.");
         }
 
-        if (email == null || email.trim().isEmpty()) {
-            throw new IllegalArgumentException("Google authentication failed: Email address is required.");
+        // Strictly verify cryptographic Google ID token - NEVER trust raw client-supplied email/profile
+        VerifiedGoogleUser verifiedUser = googleTokenVerifier.verify(request.getIdToken().trim());
+        if (verifiedUser == null || verifiedUser.getEmail() == null || verifiedUser.getEmail().isBlank()) {
+            throw new BadCredentialsException("Google authentication failed: Verified user payload is invalid.");
         }
 
-        String cleanedEmail = email.toLowerCase().trim();
+        String verifiedEmail = verifiedUser.getEmail().toLowerCase().trim();
+        String googleId = verifiedUser.getGoogleId();
+        String firstName = verifiedUser.getFirstName();
+        String lastName = verifiedUser.getLastName();
+        String picture = verifiedUser.getPicture();
 
-        // Resolve clean First and Last names
-        if (firstName == null || firstName.trim().isEmpty()) {
-            if (request.getName() != null && !request.getName().trim().isEmpty()) {
-                String[] parts = request.getName().trim().split("\\s+", 2);
-                firstName = parts[0];
-                lastName = parts.length > 1 ? parts[1] : "User";
-            } else {
-                firstName = cleanedEmail.split("@")[0];
-                lastName = "User";
-            }
-        }
-        if (lastName == null || lastName.trim().isEmpty()) {
-            lastName = "User";
-        }
-
-        Optional<User> existingUserOpt = userRepository.findByEmailIgnoreCase(cleanedEmail);
+        Optional<User> existingUserOpt = userRepository.findByEmailIgnoreCase(verifiedEmail);
 
         User user;
         if (existingUserOpt.isPresent()) {
-            // Existing user: Link Google details if not already present
             user = existingUserOpt.get();
+
+            // Administrative accounts cannot authenticate through public Google SSO without explicit administrative federation
+            if (user.getRole() == Role.ADMIN) {
+                throw new AccessDeniedException("Administrative accounts cannot authenticate via standard Google SSO.");
+            }
+
             boolean needsUpdate = false;
             if (user.getGoogleId() == null && googleId != null) {
                 user.setGoogleId(googleId);
                 needsUpdate = true;
             }
-            if (!"GOOGLE".equalsIgnoreCase(user.getAuthProvider()) && user.getAuthProvider() == null) {
+            if (!"GOOGLE".equalsIgnoreCase(user.getAuthProvider())) {
                 user.setAuthProvider("GOOGLE");
                 needsUpdate = true;
             }
@@ -134,14 +111,14 @@ public class GoogleAuthServiceImpl implements GoogleAuthService {
                 userRepository.save(user);
             }
         } else {
-            // New User: Auto-register user with Google identity
+            // New User: Auto-register user with verified Google identity
             Role targetRole = request.getRole() != null ? request.getRole() : Role.PATIENT;
             if (targetRole == Role.ADMIN) {
-                throw new IllegalArgumentException("Administrative accounts cannot be registered via Google SSO.");
+                throw new AccessDeniedException("Administrative accounts cannot be registered via Google SSO.");
             }
 
             user = User.builder()
-                    .email(cleanedEmail)
+                    .email(verifiedEmail)
                     .password(passwordEncoder.encode(UUID.randomUUID().toString()))
                     .firstName(firstName)
                     .lastName(lastName)
@@ -150,6 +127,7 @@ public class GoogleAuthServiceImpl implements GoogleAuthService {
                     .googleId(googleId)
                     .profilePicture(picture)
                     .isActive(true)
+                    .isDeleted(false)
                     .build();
 
             User savedUser = userRepository.save(user);
@@ -167,33 +145,30 @@ public class GoogleAuthServiceImpl implements GoogleAuthService {
                         .user(savedUser)
                         .dateOfBirth(dob)
                         .gender(request.getGender() != null ? request.getGender() : "Not Specified")
-                        .phoneNumber(request.getPhoneNumber() != null ? request.getPhoneNumber() : "Google User")
+                        .phoneNumber(request.getPhoneNumber() != null ? request.getPhoneNumber() : "")
                         .bloodGroup(request.getBloodGroup() != null ? request.getBloodGroup() : "O+")
-                        .address(request.getAddress() != null ? request.getAddress() : "Registered via Google Auth")
+                        .address(request.getAddress() != null ? request.getAddress() : "")
+                        .allergies(null)
+                        .medicalHistoryTimeline(null)
                         .build();
                 patientRepository.save(patient);
             } else if (targetRole == Role.DOCTOR) {
                 Doctor doctor = Doctor.builder()
                         .user(savedUser)
                         .specialization(request.getSpecialization() != null ? request.getSpecialization() : "General Medicine")
-                        .licenseNumber(request.getLicenseNumber() != null ? request.getLicenseNumber() : "G-DOC-" + System.currentTimeMillis())
-                        .experienceYears(request.getExperienceYears() != null ? request.getExperienceYears() : 5)
-                        .consultationFee(BigDecimal.valueOf(request.getConsultationFee() != null ? request.getConsultationFee() : 100.00))
-                        .biography(request.getBiography() != null ? request.getBiography() : "Registered via Google OAuth.")
+                        .licenseNumber(request.getLicenseNumber() != null ? request.getLicenseNumber() : ("DOC-" + System.currentTimeMillis()))
+                        .experienceYears(request.getExperienceYears() != null ? request.getExperienceYears() : 1)
+                        .consultationFee(request.getConsultationFee() != null ? BigDecimal.valueOf(request.getConsultationFee()) : BigDecimal.valueOf(50.0))
+                        .biography(request.getBiography() != null ? request.getBiography() : "Board certified clinician.")
                         .isVerified(false)
                         .build();
                 doctorRepository.save(doctor);
             }
 
-            // Send Welcome Email
-            try {
-                notificationService.sendWelcomeEmail(user.getEmail(), user.getFirstName() + " " + user.getLastName());
-            } catch (Exception e) {
-                System.err.println("Could not dispatch welcome email to Google user: " + e.getMessage());
-            }
+            notificationService.sendWelcomeEmail(savedUser.getEmail(), savedUser.getFirstName() + " " + savedUser.getLastName());
+            user = savedUser;
         }
 
-        // Generate system JWT
         String jwt = jwtUtils.generateToken(user.getEmail(), user.getRole().name());
 
         return AuthResponse.builder()
